@@ -21,6 +21,7 @@
 	<script>housing.security</script>
 
 	<script>ankh</script>
+	<script>leatherdye</script>
 	<script>archery_butte</script>
 	<script>bandages</script>
 	<script>blades</script>
